# agent_ops

./: .env.example  .gitignore  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml
apps/backend/: Dockerfile  demo_agent.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  start-dev.sh
apps/backend/src/agents/: orchestrator.py  rag_agent.py
apps/backend/src/api/: middleware.py
apps/backend/src/api/routes/: chat.py  feedback.py  health.py  prompts.py
apps/backend/src/config/: logging_config.py  settings.py
apps/backend/src/services/: evaluation.py  langfuse_prompt_service.py  llm_service.py  rag_service.py  telemetry.py
apps/backend/tests/: conftest.py  test_api.py  test_config.py  test_logging.py  test_middleware.py  test_models.py  test_orchestrator.py  test_telemetry.py  test_telemetry_utils.py
apps/frontend/: .prettierignore  Dockerfile  eslint.config.mjs  next.config.js  package.json  pnpm-lock.yaml  start-dev.sh  tailwind.config.js  tsconfig.json
apps/frontend/src/app/: globals.css  layout.tsx  page.tsx
apps/frontend/src/components/chat/: ChatInterface.tsx  Message.tsx  MessageInput.tsx  MessageList.tsx  PromptSelector.tsx
apps/frontend/src/hooks/: useChat.ts
apps/frontend/src/lib/: utils.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/types/: chat.ts
data/: sample.txt
