[project]
name = "agentops-demo-backend"
version = "0.2.0"
description = "AgentOps Demo — RAG pipeline with Langfuse v3 + Phoenix + OTel observability"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.12",
    "langchain-ollama>=0.3.0",
    "langchain-text-splitters>=0.3.0",
    "chromadb>=0.5.0",
    "langchain-chroma>=0.2.0",
    "langchain-community>=0.3.0",
    "pypdf>=4.0.0",
    "langfuse>=4.0.0",
    "arize-phoenix>=8.0.0",
    "openinference-instrumentation-langchain>=0.1.0",
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-otlp>=1.20.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
